# PorfolioManager

./: .gitignore  README.md  main.py  pyproject.toml
TestJptrs/Database/: DBTest.ipynb
TestJptrs/FundamentalData/: FMP.ipynb
TestJptrs/FundamentalData/Fundamentals/: AAPL_all_fundamentals.csv
TestJptrs/FundamentalData/IncomeStatements/: AAPL_quarterly_income_statements.csv
TestJptrs/PortofolioManager/: caclulatingReturns.ipynb  portfolioManager.ipynb  portfolio_columns.txt  total_weight.csv  weights_2020_to_2021.csv
TestJptrs/PortofolioManager/optimDfs/: optimDf_RC1.0_TP200_RF60.csv:Zone.Identifier  optimDf_RC1.0_TP200_RF90.csv:Zone.Identifier
TestJptrs/Strategy/: MMM_DIS_MeanReversion_WorkingData.csv  Strategy.ipynb
TestJptrs/Strategy/MeanReversion/: MeanReversion.ipynb
TestJptrs/Strategy/Value/: Value.ipynb  combinedDataDict.json
app/: CollectEODData.py  CollectFundamentalData.py  CreateCombinedData.py  Database.py  EbitdaValueStrategy.py  MeanReversion.py  PortfolioManager.py  SignalStrategy.py  TradingStrategy.py
